assets/css/main.css
/* ... */
  
  .footer a.footer-link-more {
    color: rgba(var(--color-white-rgb), 0.7);
    display: inline-block;
    position: relative;
  }
  
  .footer a.footer-link-more:before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 1px;
    background: var(--color-white);
  }
  
  .footer a.footer-link-more:hover {
    color: rgba(var(--color-white-rgb), 1);
  }
  
  .footer .footer-heading {
    color: var(--color-white);
    margin-bottom: 20px;
    padding-bottom: 10px;
    font-size: 18px;
  }
  
  .footer .footer-blog-entry li {
    margin-bottom: 20px;
    display: block;
  }
  
  .footer .footer-blog-entry li a .post-meta {
    font-size: 10px;
    letter-spacing: 0.07rem;
    text-transform: uppercase;
    font-weight: 400;
    font-family: var(--font-secondary);
    color: rgba(var(--color-white-rgb), 0.4);
    margin-bottom: 0px;
  }
  
  .footer .footer-blog-entry li a img {
    flex: 0 0 50px;
    width: 50px;
  }
  
  .footer .footer-links li {
    margin-bottom: 10px;
  }
  
  .footer .footer-links li a {
    color: rgba(var(--color-white-rgb), 0.7);
  }
  
  .footer .footer-links li a:hover,
  .footer .footer-links li a:focus {
    color: rgba(var(--color-white-rgb), 1);
  }
  
  .footer .footer-legal {
    background: var(--color-black);
    padding: 40px 0;
  }
  
  .footer .footer-legal .social-links a {
    text-align: center;
    display: inline-block;
    width: 40px;
    height: 40px;
    background-color: rgba(var(--color-white-rgb), 0.09);
    border-radius: 50%;
    color: var(--color-white);
    line-height: 40px;
  }
  
  .footer .footer-legal .social-links a:hover {
    background-color: rgba(var(--color-white-rgb), 0.2);
  }
  
  .footer .copyright strong {
    font-weight: 400;
  }
  
  .footer .credits {
    padding-top: 6px;
    font-size: 13px;
  }
  
  .footer .credits a {
    color: var(--color-white);
  }
  .map-responsive {
    overflow: hidden;
    padding-bottom: 56.25%; /* 16:9 aspect ratio */
    position: relative;
    height: 0;
  }
  
  .map-responsive iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
    border: 0;
  }
  

  /*-----------------------------------------------------
  # Current Members Page
  ------------------------------------------------------*/

  .team {
    padding: 40px 0;
  }
  
  #current-members-titles {
    text-align: center;
    margin-bottom: 40px;
    font-size: 3em;
    font-weight: 400;
  }
  
  /* Img styling */
  .team-members .team-member .current-members-imgs{
    width: 200px;
    height: 250px;
    object-fit: cover;
  }
  .team-members {
    margin-top: -0.5%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    /* gap: px; Adjust the gap between team members as needed */
  
  }
  
  .team-members .team-member {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  #guide, #visitProf {
    width: 100%; /* Ensure these are full width to center align */
    display: flex;
    justify-content: center;
    margin-bottom: 20px; /* Add margin to space between these sections */
  }
  
  #guide .team-member, #visitProf .team-member {
    width: auto; /* Allow the content to auto-size */
  }
  
  .team-member .thumbnail {
    width: 100%;
    max-width: 200px;
    margin-bottom: 10px;
  }
  
  .team-member .thumbnail img {
    width: 100%;
    height: auto;
    border-radius: 10px;
  }
  
  .team-member .member-info {
    text-align: center;
    padding: 10px 20px;
  }
  
  .team-member .member-meta {
    margin-bottom: 10px;
  }
  
  .team-member .member-meta .title {
    font-weight: bold;
    font-size: 1.2em;
  }
  
  .team-member .name {
    font-size: 1.5em;
    margin-bottom: 10px;
  }
  
  .team-member .description {
    margin-bottom: 20px;
  }
  
  .team-member .social-links a {
    margin-right: 10px;
    font-size: 1.2em;
    color: #333;
    text-decoration: none;
  }
  
  .team-member .social-links a:hover {
    color: #007bff;
  }
  

  
  .team-member {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: calc(33.333% - 20px);
    margin-bottom: 30px;
    box-sizing: border-box;
  }
  
  
  
  .team-member .member-meta .title {
    font-weight: bold;
    font-size: 1.2em;
  }
  
  .team-member .name {
    font-size: 1.5em;
    margin-bottom: 10px;
  }
  
  .team-member .description {
    margin-bottom: 20px;
  }
  
  .team-member .social-links a {
    margin-right: 10px;
    font-size: 1.2em;
    color: #333;
    text-decoration: none;
  }
  
  .team-member .social-links a:hover {
    color: #007bff;
  }
  

  /*---------------------------------------------------------
  # Past Members sectioin
  -----------------------------------------------------------*/
  #past-members-title{
    margin-top: -0.5%;
    margin-bottom:40px;
    text-align: center;
    font-weight: 600;
    font-size: 40px;
  }
  
  /*------------------------------------------------------------
  # M.tech Students
  -----------------------------------------------------------*/
  
  .container-mtech {
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
  } 
  
  h1 {
    text-align: center;
    font-size: 2em;
    margin-bottom: 30px;
    margin-top: -2%;
  }
  
  .thesis-list {
    list-style: none;
    padding: 0;
  }
  
  .thesis-list li {
    margin-bottom: 15px;
    line-height: 1.5;
    border-bottom: 1px solid #444;
    padding-bottom: 10px;
  }
  
  .thesis-list li:last-child {
    border-bottom: none;
  }
  
  
  
  /*------------------------------------------------------------
  # Publicatiions Students
  -----------------------------------------------------------*/
  /* 
  .container-publications {
    max-width: 800px;
    margin: 0 auto;
    background-color: #fff;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
    border-radius: 8px;
  }
/* ... */

